@@ -2,6 +2,7 @@
 Veretino 0.7.0
 What's new:
 * Ability to add and edit comments to databases.
+* The 'Verified' time stamp is now considered obsolete after moving the folder.
 
 Internal changes:
 * The QMicroz lib has become a submodule and no longer requires additional build.
